# text-processing

./: .gitignore  LICENSE  README.md  _processing.py  _tagging.py  pyproject.toml  setup.cfg
text_processing/: __init__.py  _cleaning.py  _download.py  _processing.py  _tagging.py
text_processing/cleaning/: __init__.py
text_processing/download/: __init__.py
text_processing/en/: _tagging.py
text_processing/es/: _tagging.py
text_processing/pt/: _tagging.py
text_processing/tagging/: __init__.py  _tagging.py
