[metadata]
name = text-processing
version = file: version.txt
author = Allan Covacevice
author_email = allan.covacevice@gmail.com
summary = Library for preprocessing textual data.
home_page = https://github.com/Acovacevice/text-processing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy>=1.21.*
    nltk>=3.7
    nlpnet>=1.2.4
    requests>=2.27.1
    rich>=9.*
include_package_data=True
python_requires = >=3.8

[options.packages.find]
include = text_processing, text_processing.*

[mypy]
files=text_processing
ignore_missing_imports=true