[metadata]
name = text-processing
version = file: version.txt
author = Allan Covacevice
author_email = allan.covacevice@gmail.com
summary = Library for preprocessing textual data.
home_page = https://github.com/Acovacevice/text-processing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyicu>=2.9
    pycld2>=0.41
    morfessor>=2.*
    polyglot>=16.*
include_package_data=True
python_requires = >=3.8

[options.packages.find]
include = text_processing, text_processing.*

[mypy]
files=text_processing
ignore_missing_imports=true
